--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,93 @@
+# version: '2'
+#
+# services:
+# #  influxdb:
+# #  grafana:
+#   website:
+# #    depends_on:
+#     build: .
+#     ports:
+#       - '3000:3000'
+#     volumes:
+#       - '.:/aws_monitor'
+#     env_file:
+#       - '.env'
+#   #
+#   # sidekiq:
+#   #   build: .
+#   #   command: sidekiq -C config/sidekiq.yml.erb
+#   #   volumes:
+#   #     - '.:/aws_monitor'
+#   #   env_file:
+#   #     - '.env'
+#   #
+#   # cable:
+#   #   build: .
+#   #   command: puma -p 28080 cable/config.ru
+#   #   ports:
+#   #     - '28080:28080'
+#   #   volumes:
+#   #     - '.:/aws_monitor'
+#   #   env_file:
+#   #     - '.env'
+#
+
 version: '2'
 
 services:
-#  influxdb: 
-#  grafana:
+  postgres:
+    image: 'postgres:9.5'
+    environment:
+      POSTGRES_USER: 'orats_base'
+      POSTGRES_PASSWORD: 'yourpassword'
+    ports:
+      - '5432:5432'
+    volumes:
+      - 'postgres:/var/lib/postgresql/data'
+
+  redis:
+    image: 'redis:3.2-alpine'
+    command: redis-server --requirepass yourpassword
+    ports:
+      - '6379:6379'
+    volumes:
+      - 'redis:/var/lib/redis/data'
+
   website:
-#    depends_on:
+    depends_on:
+      - 'postgres'
+      - 'redis'
     build: .
     ports:
       - '3000:3000'
     volumes:
-      - '.:/aws_monitor'
+      - '.:/orats_base'
     env_file:
       - '.env'
-  #
-  # sidekiq:
-  #   build: .
-  #   command: sidekiq -C config/sidekiq.yml.erb
-  #   volumes:
-  #     - '.:/aws_monitor'
-  #   env_file:
-  #     - '.env'
-  #
-  # cable:
-  #   build: .
-  #   command: puma -p 28080 cable/config.ru
-  #   ports:
-  #     - '28080:28080'
-  #   volumes:
-  #     - '.:/aws_monitor'
-  #   env_file:
-  #     - '.env'
 
+  sidekiq:
+    depends_on:
+      - 'postgres'
+      - 'redis'
+    build: .
+    command: sidekiq -C config/sidekiq.yml.erb
+    volumes:
+      - '.:/orats_base'
+    env_file:
+      - '.env'
+
+  cable:
+    depends_on:
+      - 'redis'
+    build: .
+    command: puma -p 28080 cable/config.ru
+    ports:
+      - '28080:28080'
+    volumes:
+      - '.:/orats_base'
+    env_file:
+      - '.env'
+
+volumes:
+  redis:
+  postgres:
